--- a/skiing-game-server/package.json
+++ b/skiing-game-server/package.json
@@ -1,15 +1,28 @@
 {
   "name": "skiing-game-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Multiplayer server for 3D skiing game",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "websocket",
+    "game-server",
+    "multiplayer",
+    "skiing-game"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
